<resources>
    <string name="app_name">HomeWork</string>
    <string name="action_settings">Settings</string>
    <string name="ph">placeholder</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="contact_img">img</string>
    <string name="ok">OK</string>
    <string name="Sounds">Sounds</string>
    <string name="Sound1">Sound 1</string>
    <string name="Sound2">Sound 2</string>
    <string name="Sound3">Sound 3</string>
    <string name="Sound4">Sound 4</string>
    <string name="Name1">Michał Parchaś</string>
    <string name="Name2">Paweł Jumper</string>
    <string name="Name3">Pat</string>
    <string name="select">Select a sound:</string>
    <string name="setS">Set Sound</string>
    <string name="setC">Set Contact</string>
    <string-array name="contactsArray">
        <item>Michał Parchaś</item>
        <item>Paweł Jumper</item>
        <item>Pat</item>
    </string-array>
</resources>
