<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/ph"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/cont_img"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:layout_weight="2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="3"
        android:text="@string/setS" />

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="35dp"
        android:layout_weight="3"
        android:text="@string/setC"
        android:textAllCaps="true" />

</LinearLayout>